[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
# I/O
serde = "1"
serde_json = "1"
ignore = { git = "https://github.com/timsueberkrueb/ignore.git", rev = "ef7e0d8399e0e52dc8390a5614aa41d6e9611911" }
# Async
tokio = { version = "1", features = ["rt-multi-thread"] }
# Error handling
thiserror = "1"
anyhow = "1"
# Workspace
graph = { path = "../graph" }
lsp-client = { path = "../lsp-client" }
